Merged in r559332 from trunk
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/branches/2.0@559468 13f79535-47bb-0310-9956-ffa450edef68